[package]
name = "gsfont"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
clap = { version = "4.4.14", features = ["derive"] }
clap-num = "1.0.2"
image = "0.25.5"
